# arivu

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  INSTALLATION.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  clippy.toml  deny.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
arivu_cli/: Cargo.toml  README.md
arivu_cli/src/: cli.rs  feature_hints.rs  main.rs
arivu_cli/src/commands/: call.rs  config.rs  connectors.rs  fetch.rs  get.rs  list.rs  mod.rs  pricing.rs  search.rs  setup.rs  tool_mapping_audit.rs  tool_mappings.rs  tools.rs  usage.rs  usage_helpers.rs
arivu_cli/src/output/: mod.rs  pretty.rs
arivu_cli/src/tui/: mod.rs
arivu_core/: Cargo.toml  pricing.toml
arivu_core/examples/: arxiv.rs  drive_poc.rs  graph_poc.rs  hackernews.rs  pubmed.rs  pubmed_connector.rs  reddit.rs  scihub_connector.rs  search_eval.rs  semantic_scholar.rs  web.rs  wikipedia_example.rs  x_connector.rs  youtube.rs
arivu_core/src/: auth.rs  auth_store.rs  lib.rs  mcp_server.rs  resolver.rs  tools.rs  usage.rs  utils.rs
arivu_core/src/connectors/: federated.rs  mod.rs
arivu_core/src/connectors/anthropic_search/: mod.rs
arivu_core/src/connectors/apple_contacts/: mod.rs
arivu_core/src/connectors/apple_health/: NOT_READY.md  mod.rs
arivu_core/src/connectors/apple_mail/: mod.rs
arivu_core/src/connectors/apple_messages/: mod.rs
arivu_core/src/connectors/apple_notes/: mod.rs
arivu_core/src/connectors/apple_reminders/: mod.rs
arivu_core/src/connectors/arxiv/: mod.rs
arivu_core/src/connectors/atlassian/: mod.rs
arivu_core/src/connectors/biorxiv/: mod.rs
arivu_core/src/connectors/discord/: mod.rs
arivu_core/src/connectors/exa_search/: mod.rs
arivu_core/src/connectors/firecrawl_search/: mod.rs
arivu_core/src/connectors/gemini_search/: mod.rs
arivu_core/src/connectors/github/: mod.rs
arivu_core/src/connectors/google_calendar/: mod.rs
arivu_core/src/connectors/google_drive/: mod.rs
arivu_core/src/connectors/google_gmail/: mod.rs
arivu_core/src/connectors/google_people/: mod.rs
arivu_core/src/connectors/google_scholar/: mod.rs
arivu_core/src/connectors/hackernews/: mod.rs  types.rs
arivu_core/src/connectors/imap/: mod.rs
arivu_core/src/connectors/localfs/: mod.rs  types.rs
arivu_core/src/connectors/localfs/extractors/: code.rs  docx.rs  epub.rs  html.rs  markdown.rs  pdf.rs  plaintext.rs
arivu_core/src/connectors/macos/: mod.rs
arivu_core/src/connectors/microsoft/: mod.rs
arivu_core/src/connectors/openai_search/: mod.rs
arivu_core/src/connectors/parallel_search/: mod.rs
arivu_core/src/connectors/perplexity_search/: mod.rs
arivu_core/src/connectors/pubmed/: mod.rs
arivu_core/src/connectors/reddit/: mod.rs
arivu_core/src/connectors/rss/: mod.rs
arivu_core/src/connectors/scihub/: mod.rs
arivu_core/src/connectors/semantic_scholar/: mod.rs
arivu_core/src/connectors/serpapi_search/: mod.rs
arivu_core/src/connectors/serper_search/: mod.rs
arivu_core/src/connectors/slack/: mod.rs
arivu_core/src/connectors/spotlight/: mod.rs
arivu_core/src/connectors/tavily_search/: mod.rs
arivu_core/src/connectors/web/: mod.rs
arivu_core/src/connectors/wikipedia/: mod.rs
arivu_core/src/connectors/x/: mod.rs
arivu_core/src/connectors/xai_search/: mod.rs
arivu_core/src/connectors/youtube/: mod.rs
arivu_core/src/federated/: mod.rs  profiles.rs
arivu_core/tests/: resolver_tests.rs
arivu_mcp/: Cargo.toml  README.md  mcp_config.example.toml
arivu_mcp/src/: main.rs
docs/: ARCHITECTURE.md  AUTH_DESIGN.md  CLI_DESIGN.md  CONNECTORS.md  CONNECTOR_DEVELOPMENT.md  FEATURES.md  FEDERATED_SEARCH.md  SMART_RESOLVER.md  llms.txt  macos_automation.md
docs/auth/: README.md
docs/connectors/: README.md  slack.md  spotlight.md  whatsapp.md
docs/integrations/: DOWNSTREAM_UPGRADE.md  LLM_WEB_SEARCH.md  OAUTH_MCP.md  SETUP.md  TOOLS.md
docs/tools/: WEB_SEARCH_TOOLS.md
packaging/: README.md
packaging/homebrew/: rzn-datasourcer.rb
packaging/scripts/: build-all-zigbuild.sh  build-all.sh  install.sh
scrapable_derive/: Cargo.toml
