[workspace]
resolver = "2"
members = [
    "arivu_core",
    "arivu_cli",
    "arivu_mcp",
    "scrapable_derive",
]
default-members = ["arivu_cli"]

[workspace.package]
edition = "2021"
rust-version = "1.75.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/srv1n/arivu"

[workspace.lints.rust]
unsafe_code = "warn"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
# Standard warnings - allow some common patterns for initial release
all = { level = "warn", priority = -1 }
# Allow patterns common in this codebase
redundant_closure = "allow"
redundant_closure_for_method_calls = "allow"
manual_flatten = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"

[patch.crates-io]
rusty_ytdl = { path = "vendor/rusty_ytdl" }

[profile.release]
opt-level = "z"    # Optimize for size over speed
lto = true
codegen-units = 1
panic = "abort"
strip = true       # Remove debug symbols
overflow-checks = false
debug = false      # Disable debug info
rpath = false      # Disable rpath
incremental = false # Disable incremental compilation
